pagination && see-event translate

--- a/src/app/pages/event/see-event/reactions-modal/reactions-modal.component.html
+++ b/src/app/pages/event/see-event/reactions-modal/reactions-modal.component.html
@@ -5,7 +5,7 @@
         <li *ngIf="allBy" class="nav-item">   
 	      <a class="nav-link nav-all" href="#" data-toggle="tab" data-target="#tab1" translate>
 	      	<span class="la la-users">
-	      	  <span class="icon-number badge">{{allBy.length}}</span>
+	      	  <span class="icon-number badge">{{allUsers.length}}</span>
 	      	</span>
 	      </a>
         </li>
