--- a/src/app/templates/modal/modal.component.html
+++ b/src/app/templates/modal/modal.component.html
@@ -9,8 +9,8 @@
     {{modalContent}}
   </div>
   <div class="modal-footer">
-  <button class="btn btn-primary confirm-btn" (click)="confirmModal()">Acept</button>
-    <button class="btn btn-primary confirm-btn" (click)="cancelModal()">Close</button>
+  <button class="btn btn-primary confirm-btn" (click)="confirmModal()" translate>{{'modal.acept'}}</button>
+  <button class="btn btn-primary confirm-btn" (click)="cancelModal()" translate>{{'modal.cancel'}}</button>
     
   </div>
 </div>
